--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,13 @@ jobs:
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        run: ./gradlew bootJar --info
+        run: |
+          pwd
+          ./gradlew bootJar --info
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: [ continuous-integration ]
 
     steps:
       - name: Checkout
